--- a/AminWeb/Views/Shared/_LoggedInUser.cshtml
+++ b/AminWeb/Views/Shared/_LoggedInUser.cshtml
@@ -3,7 +3,7 @@
     <a href="/User/Account/UserData" uk-icon="icon:user;ratio:1.4" class="uk-margin-auto-right uk-margin-auto-top uk-height-1-1 lesser">
 
     </a>
-    <div uk-drop id="navDrop">
+    <div uk-drop="offset: 0" id="navDrop">
         <div class="drop-body uk-padding-small column">
             <ul class="uk-margin-remove uk-padding-remove">
                 <li>
