--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -1,5 +1,5 @@
-﻿<div class="mat column uk-box-shadow-large uk-padding">
-    <header class="row-reverse">
+﻿<div class="videoClass mat column uk-box-shadow-large uk-padding">
+    <header class="header row-reverse">
         <h5>
             نام این کلاس
         </h5>
@@ -8,7 +8,7 @@
         </span>
         <a role="button" href="#" uk-icon="info" class="uk-margin-auto-right" type="button"></a>
         <div uk-drop="offset:0">
-            <div class="drop-body uk-form-width-medium uk-padding">
+            <div class="drop-body uk-form-width-medium">
                 <dl>
                     <dt>
                         نام کلاس
@@ -29,6 +29,12 @@
                         <span uk-icon="star">
                             4.5
                         </span>
+                    </dd>
+                    <dt>
+                        تعداد ویدیو های کلاس
+                    </dt>
+                    <dd>
+                        19
                     </dd>
                 </dl>
             </div>
