--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -1,10 +1,14 @@
-﻿<div class="mat column uk-box-shadow-large uk-padding">
+﻿@model DataLayer.Models.TblPlaylist
+
+@if(Model != null)
+{
+<div class="mat column uk-box-shadow-large uk-padding">
     <header class="row-reverse">
         <h5>
-            نام این کلاس
+            @Model.Title
         </h5>
         <span class="uk-badge uk-margin-small-right">
-            19
+            @Model.TblVideo.Count()
         </span>
         <a role="button" href="#" uk-icon="info" class="uk-margin-auto-right" type="button"></a>
         <div uk-drop="offset:0">
@@ -14,20 +18,20 @@
                         نام کلاس
                     </dt>
                     <dd>
-                        کلاس علوم اجتماعی
+                       @Model.Title
                     </dd>
                     <dt>
                         آپلود کننده
                     </dt>
                     <dd>
-                        <a href="#">حسن حسن زاده</a>
+                        <a href="#">@Model.TblUser.Name</a>
                     </dd>
                     <dt>
                         میانگین امتیاز ها
                     </dt>
                     <dd>
                         <span uk-icon="star">
-                            4.5
+                            @(Model.TblVideo.Sum(m=>m.LikeCount/20))
                         </span>
                     </dd>
                 </dl>
@@ -37,31 +41,14 @@
     <div uk-slider>
         <div class="playlist uk-position-relative uk-visible-toggle" tabindex="-1">
             <ul class="uk-slider-items uk-padding-small uk-child-width-1-1 uk-child-width-1-2-at-s uk-child-width-1-3-at-m">
-                <li>
-                    <div>
-                        @Html.Partial("_VideoBlock")
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        @Html.Partial("_VideoBlock")
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        @Html.Partial("_VideoBlock")
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        @Html.Partial("_VideoBlock")
-                    </div>
-                </li>
-                <li>
-                    <div>
-                        @Html.Partial("_VideoBlock")
-                    </div>
-                </li>
+                @foreach (var item in Model.TblVideo)
+                {
+                    <li>
+                        <div>
+                            @Html.Partial("_VideoBlock",item)
+                        </div>
+                    </li>
+                }
             </ul>
             <a class="handle uk-position-center-left uk-position-small uk-hidden-hover" uk-slidenav-previous uk-slider-item="previous"></a>
             <a class="handle uk-position-center-right uk-position-small uk-hidden-hover" uk-slidenav-next uk-slider-item="next"></a>
@@ -70,3 +57,4 @@
         <ul class="uk-slider-nav uk-dotnav uk-flex-center uk-margin uk-light"></ul>
     </div>
 </div>
+}
