--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -12,7 +12,7 @@
         </span>
         <a role="button" href="#" uk-icon="info" class="uk-margin-auto-right" type="button"></a>
         <div uk-drop="offset:0">
-            <div class="drop-body uk-form-width-medium uk-padding">
+            <div class="drop-body uk-form-width-medium">
                 <dl>
                     <dt>
                         نام کلاس
@@ -33,6 +33,12 @@
                         <span uk-icon="star">
                             @(Model.TblVideo.Sum(m=>m.LikeCount/20))
                         </span>
+                    </dd>
+                    <dt>
+                        تعداد ویدیو های کلاس
+                    </dt>
+                    <dd>
+                        19
                     </dd>
                 </dl>
             </div>
