--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -12,7 +12,7 @@
         </span>
         <a role="button" href="#" uk-icon="info" class="uk-margin-auto-right" type="button"></a>
         <div uk-drop="offset:0">
-            <div class="drop-body uk-form-width-medium">
+            <div class="drop-body uk-form-width-medium uk-padding">
                 <dl>
                     <dt>
                         نام کلاس
