update view page

--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -819,3 +819,6 @@ select {
     direction: rtl; }
   .uk-notification-message > div {
     margin-right: 24px; }
+
+.listCategory b {
+  color: #F94646; }
