--- a/AminWeb/Views/Shared/_Playlist.cshtml
+++ b/AminWeb/Views/Shared/_Playlist.cshtml
@@ -38,7 +38,7 @@
                         تعداد ویدیو های کلاس
                     </dt>
                     <dd>
-                        19
+                        @Model.TblVideo.Count()
                     </dd>
                 </dl>
             </div>
