--- a/AminWeb/Views/Shared/_VideoBlock.cshtml
+++ b/AminWeb/Views/Shared/_VideoBlock.cshtml
@@ -27,7 +27,7 @@
         </div>
         <div class="text column">
             <div class="content column">
-                <a href="/VideoView/@Model.VideoId/@Model.Title" class="title">
+                <a href="/VideoView/@Model.VideoId/@Model.Title.Replace(" ","-")" class="title">
                     @Model.Title
                 </a>
                 <p class="desciption">
