--- a/AminWeb/Views/Video/VideoView.cshtml
+++ b/AminWeb/Views/Video/VideoView.cshtml
@@ -129,7 +129,7 @@
             </div>
         </div>
 
-        @Html.Partial("_Playlist")
+        @*@Html.Partial("_Playlist")*@
 
     </div>
 </div>
