--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -69,7 +69,7 @@
             <div role="menu" class="column">
                 <!-- #region Category -->
 
-                @Html.Action("Index", "Category")
+                @Html.Action("Index", "Category",new { area=""})
 
                 <!-- #endregion -->
             </div>
