Payment and Purchase

--- a/AminWeb/Content/Styles/_colors.scss
+++ b/AminWeb/Content/Styles/_colors.scss
@@ -19,6 +19,8 @@ $primary-light: #ff6767;
 $accent: #55ACEE;
 $accent-light: #85c7f8;
 
+$success: #73DA42;
+
 /*#endregion */
 
 /*#region Global */
