--- a/AminWeb/Views/ShopCart/Purchase.cshtml
+++ b/AminWeb/Views/ShopCart/Purchase.cshtml
@@ -14,9 +14,9 @@
          uk-padding column uk-box-shadow-large">
         <!-- #region Content -->
 
-        <h1 class="uk-h3 uk-margin-remove-bottom">پرداخت</h1>
+        <h1 class="uk-h3 uk-margin-remove   -bottom">پرداخت</h1>
 
-        <p class="alert" dir="rtl">
+        <p class="alert-box alert-box-warning" dir="rtl">
             لطفا در خرید خود دقت کنید، هزینه پرداختی به هیچ عنوان قابل استرداد نمی باشد.
         </p>
 
