--- a/AminWeb/Views/Shared/_Layout.cshtml
+++ b/AminWeb/Views/Shared/_Layout.cshtml
@@ -41,6 +41,10 @@
     <!-- #endregion -->
     <!-- #region Header -->
 
+    <div role="progressbar" aria-label="site load progress" id="loader">
+        <span class="fill"></span>
+    </div>
+
     <header role="navigation" class="top-nav row">
         <nav class="uk-flex-auto row flex-1">
             <div id="loggedInUser" class="column">
