--- a/AminWeb/Content/Styles/Controls.css
+++ b/AminWeb/Content/Styles/Controls.css
@@ -822,3 +822,51 @@ select {
 
 .listCategory b {
   color: #F94646; }
+
+#loader {
+  height: 3px;
+  left: 0;
+  right: 0;
+  position: fixed;
+  background: #fc9595;
+  z-index: 1010;
+  display: flex; }
+  #loader .fill {
+    background: #F94646;
+    width: 64%;
+    -moz-border-radius: 4px 4px 4px 4px;
+    -webkit-border-radius: 4px 4px 4px 4px;
+    border-radius: 4px 4px 4px 4px;
+    /* -moz-border-radius: 0;
+    -webkit-border-radius: 0;
+    border-radius: 0;*/
+    -moz-animation-name: loader;
+    -o-animation-name: loader;
+    -webkit-animation-name: loader;
+    animation-name: loader;
+    -moz-animation-duration: 1.5s;
+    -o-animation-duration: 1.5s;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -moz-animation-iteration-count: infinite;
+    -o-animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite; }
+
+@keyframes loader {
+  from {
+    transform: translateX(-100vw); }
+  to {
+    transform: translateX(100vw); } }
+
+@-moz-keyframes loader {
+  from {
+    transform: translateX(-100vw); }
+  to {
+    transform: translateX(100vw); } }
+
+@-webkit-keyframes loader {
+  from {
+    transform: translateX(-100vw); }
+  to {
+    transform: translateX(100vw); } }
